--- a/resume project/feras-final-resume.html
+++ b/resume project/feras-final-resume.html
@@ -18,7 +18,7 @@
 
   <strong style= "font-size: 20px;"> Journalist </strong><br><br>
 
-  <img src="feras2.jpg" width="300">
+  <img src="feras.jpg" width="300">
 
 <!-- contact details -->
   <ul>
