--- a/resume project/feras-final-resume.html
+++ b/resume project/feras-final-resume.html
@@ -23,7 +23,7 @@
 <!-- contact details -->
   <ul>
     <li><a href="mailto:fismail1@umd.edu">Email</a></li>
-    <li><a href="https://www.linkedin.com/in/feras-ismail">LinkedIn</a></li>
+    <li><a href="https://www.linkedin.com/in/feras-ismail-392102196">LinkedIn</a></li>
     <li><a href="https://twitter.com/feras_dream">Twitter</a></li>
     <li><a href="https://github.com/ferasismail">Github</a></li>
   </ul>
