updated for style sheet
adding css

--- a/resume_project/feras-final-resume.html
+++ b/resume_project/feras-final-resume.html
@@ -6,6 +6,10 @@
 
   <title> Feras Ismail's resume </title>
 
+  <link rel="stylesheet" type="text/css" href="style.css">
+
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans:100,300,400,700" rel="stylesheet">
+
 </head>
 
 <!-- note to self  im sexy -->
