--- a/resume_project/feras-final-resume.html
+++ b/resume_project/feras-final-resume.html
@@ -20,7 +20,7 @@
 
   <h1> Feras Ismail </h1>
 
-  <strong style= "font-size: 20px;"> Journalist </strong><br><br>
+  <strong> Journalist </strong><br><br>
 
   <img src="feras.jpg" width="300">
 
